-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.16.0, Lustre 2.15.3, Lustre 2.15.5
-
None
-
3
-
9223372036854775807
When running LFSCK with --dryrun the following stack will spam the console log while running and cause significant load/slowdown on the MDT due to the many console messages:
kernel: CPU: 8 PID: 21324 Comm: lfsck Tainted: G OE ------------ T 3.10.0-1160.59.1.el7_lustre.ddn16.x86_64 #1 kernel: Hardware name: DDN SFA400NVXE, BIOS rel-1.14.0-0-g155821a1990b-prebuilt.qemu.org 04/01/2014 kernel: Call Trace: kernel: [<ffffffff9d3865b9>] dump_stack+0x19/0x1b kernel: [<ffffffffc133e164>] lfsck_trans_create.part.53+0x6c/0x75 [lfsck] kernel: [<ffffffffc1302d39>] lfsck_namespace_trace_update+0x919/0xa10 [lfsck] kernel: [<ffffffffc0611f02>] ? fld_local_lookup+0x62/0x270 [fld] kernel: [<ffffffffc1307d60>] lfsck_namespace_exec_oit+0x6b0/0x880 [lfsck] kernel: [<ffffffffc12f0871>] lfsck_exec_oit+0x81/0xb10 [lfsck] kernel: [<ffffffffc12f1ae8>] lfsck_master_oit_engine+0x7e8/0x12f0 [lfsck] kernel: [<ffffffff9cce6321>] ? put_prev_entity+0x31/0x400 kernel: [<ffffffffc12f2ee6>] lfsck_master_engine+0x8f6/0x13b0 [lfsck] kernel: [<ffffffff9ccd4abe>] ? finish_task_switch+0x4e/0x1c0 kernel: [<ffffffff9ccdadf0>] ? wake_up_state+0x20/0x20 kernel: [<ffffffffc12f25f0>] ? lfsck_master_oit_engine+0x12f0/0x12f0 [lfsck] kernel: [<ffffffff9ccc5e61>] kthread+0xd1/0xe0 kernel: [<ffffffff9ccc5d90>] ? insert_kthread_work+0x40/0x40 kernel: [<ffffffff9d399ddd>] ret_from_fork_nospec_begin+0x7/0x21 kernel: [<ffffffff9ccc5d90>] ? insert_kthread_work+0x40/0x40 kernel: CPU: 8 PID: 21324 Comm: lfsck Tainted: G OE ------------ T 3.10.0-1160.59.1.el7_lustre.ddn16.x86_64 #1
- is related to
-
LU-13124 lfsck check for multiple linked file at OST
-
- Resolved
-